# xr-privacy-semantic-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
apps/dashboard/: audit_dashboard.py
apps/edge_gateway/: main.py
apps/server/: main.py
configs/: privacy_policy.yaml  risk_thresholds.yaml  semantic_profiles.yaml
docs/: api_contract.md  architecture.md  commercialization_plan.md  demo_script.md  evaluation_plan.md  integration_guide.md  product_spec.md  research_notes.md  threat_model.md
examples/: generated_semantic_packet.json  semantic_packet_document.json
infra/: docker-compose.yml  server.Dockerfile
scripts/: generate_demo_packet.py
