[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xr-privacy-semantic-ai-platform"
version = "0.1.0"
description = "Privacy-preserving XR semantic communication SDK and governance platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "numpy>=1.26",
]

[tool.pytest.ini_options]
pythonpath = ["packages/xr_privacy_sdk"]
testpaths = ["packages/xr_privacy_sdk/tests"]
